[tool.poetry]
name = "python_cryptography"
version = "0.1.0"
description = ""
authors = ["Sorokaty Semyon <sorokaty0824@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^36.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
